--- a/unblockNeteaseMusic.yaml
+++ b/unblockNeteaseMusic.yaml
@@ -71,8 +71,8 @@ proxies:
 #  http
   - name: 🎵 解锁节点
     type: http
-    server: [your ip. e.g. 127.0.0.1]
-    port: [your port. e.g. 80]
+    server: [39.106.97.94]
+    port: [3333]
 
 proxy-groups:
   - name: UnblockNeteaseMusic
